--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -113,11 +113,14 @@ fastcore==1.3.26 # LEVEL_03
 fastdownload==0.0.5 # LEVEL_04
 fastprogress==1.0.0 # LEVEL_02
 #
-h2o==3.34.0.1 # LEVEL_03
+h2o==3.35.0.2 # LEVEL_03
 #
 gym==0.20.0 # LEVEL_02
 #
 gensim==4.1.2 # LEVEL_03
+#
+openai==0.10.5 # LEVEL_04
+pandas-stubs==1.2.0.19 # LEVEL_01 # needed by openai
 #
 #ktrain>=0.27.2
 #
@@ -291,7 +294,7 @@ colorama==0.4.4 # LEVEL_01 Cross-platform colored terminal text
 filelock==3.3.0 # LEVEL_01
 flake8==3.9.2 # LEVEL_02 # better linter than pyflakes
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile
-pydeps==1.10.11 # LEVEL_02 # display module dependencies # cd src/main; pydeps .; open main.svg
+pydeps==1.10.12 # LEVEL_02 # display module dependencies # cd src/main; pydeps .; open main.svg
 autopep8==1.5.7 # LEVEL_02 # using fix_file ..
 mypy==0.910 # LEVEL_02
 mypy-extensions==0.4.3 # LEVEL_01 # investigate more for automated checking
