--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -58,6 +58,7 @@ graphviz==0.17 # LEVEL_01 # needed for dependecy graphing .. missing dependencie
 #
 pyflakes==2.3.1 # LEVEL_01 # required by flake8
 #
+httpx==0.18.1 # LEVEL_04 # tda-api requires this version
 
 #
 # Generic Low Level Tools
@@ -216,7 +217,17 @@ yfinance==0.1.63 # LEVEL_04 # https://github.com/ranaroussi/yfinance
 pyfolio==0.9.2 # LEVEL_06 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio
 py-vollib==1.0.1 # LEVEL_04 # option pricing
 ta-lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # fix: pip uninstall ta-lib; pip install --upgrade --no-cache-dir ta-lib # sometimes needed
-
+#
+robin-stocks==2.0.4 # LEVEL_04
+tda-api==1.3.7 # LEVEL_05
+authlib==0.15.4 # LEVEL_04
+cryptography==35.0.0 # LEVEL_03
+h11==0.12.0 # LEVEL_01
+httpcore==0.13.7 # LEVEL_03
+pyotp==2.6.0 # LEVEL_01
+python-dotenv==0.19.0 # LEVEL_01
+rfc3986==1.5.0 # LEVEL_01
+selenium==3.141.0 # LEVEL_02
 #
 # GUI & Visualization
 #
