--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -56,8 +56,6 @@ cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.6
 #
 graphviz==0.17 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed
 #
-pyflakes==2.3.1 # LEVEL_01 # required by flake8
-#
 httpx==0.18.1 # LEVEL_04 # tda-api requires this version
 #
 uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0
@@ -125,7 +123,7 @@ gym==0.21.0 # LEVEL_02
 gensim==4.1.2 # LEVEL_03
 #
 openai==0.10.5 # LEVEL_04
-pandas-stubs==1.2.0.19 # LEVEL_01 # needed by openai
+pandas-stubs==1.2.0.22 # LEVEL_01 # needed by openai
 #
 #ktrain>=0.27.2
 #
@@ -151,8 +149,8 @@ babel==2.9.1 # LEVEL_02
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.18.58 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.21.58 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.18.59 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.21.59 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
@@ -200,7 +198,7 @@ alpha-vantage==2.3.1 # LEVEL_04
 coinpaprika==0.1.0 # LEVEL_03
 empyrical==0.5.5 # LEVEL_05 # empyrical 0.5.3 - technical analysis: Common financial risk metrics
 finta==1.3 # LEVEL_04
-ib-insync==0.9.67 # LEVEL_03 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary
+ib-insync==0.9.68 # LEVEL_03 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary
 iexfinance==0.5.0 # LEVEL_04
 intrinio-sdk==5.16.0 # LEVEL_03
 oandapyv20==0.7.2 # LEVEL_01 # urwid urwidtrees # for OANDA console
@@ -267,7 +265,7 @@ dash-table==5.0.0 # LEVEL_01
 # Google ..
 #
 google-api-core==2.1.0 # LEVEL_04
-google-api-python-client==2.24.0 # LEVEL_05 # Google API Client Library for Python
+google-api-python-client==2.25.0 # LEVEL_05 # Google API Client Library for Python
 google-auth-httplib2==0.1.0 # LEVEL_04
 google-auth-oauthlib==0.4.6 # LEVEL_04
 google-pasta==0.2.0 # LEVEL_02
@@ -308,7 +306,10 @@ cloudscraper==1.2.58 # LEVEL_04 # bypass Cloudflare's anti-bot page
 colorama==0.4.4 # LEVEL_01 Cross-platform colored terminal text
 filelock==3.3.0 # LEVEL_01
 #
-flake8==3.9.2 # LEVEL_02 # better linter than pyflakes
+flake8==3.9.2 # LEVEL_02 # better linter than pyflakes,
+pyflakes==2.3.1 # LEVEL_01 # required by flake8
+pycodestyle==2.7.0 # LEVEL_01
+#
 #
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile
 pydeps==1.10.12 # LEVEL_02 # display module dependencies # cd src/main; pydeps .; open main.svg
@@ -458,7 +459,6 @@ pyasn1==0.4.8 # LEVEL_01
 pyasn1-modules==0.2.8 # LEVEL_02
 pycares==4.0.0 # LEVEL_03
 pycocotools==2.0.2 # LEVEL_04
-pycodestyle==2.7.0 # LEVEL_01
 pycparser==2.20 # LEVEL_01
 pydantic==1.8.2 # LEVEL_02
 pyinstaller==4.5.1 # LEVEL_03
