--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -60,10 +60,6 @@ httpx==0.18.1 # LEVEL_04 # tda-api requires this version
 #
 uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0
 #
-flake8==3.9.2 # LEVEL_02 # better linter than pyflakes,
-pyflakes==2.3.1 # LEVEL_01 # required by flake8
-pycodestyle==2.7.0 # LEVEL_01
-#
 # Generic Low Level Tools
 #
 pandas==1.3.3 # LEVEL_03
@@ -268,7 +264,7 @@ dash-table==5.0.0 # LEVEL_01
 # Google ..
 #
 google-api-core==2.1.0 # LEVEL_04
-google-api-python-client==2.25.0 # LEVEL_05 # Google API Client Library for Python
+google-api-python-client==2.26.0 # LEVEL_05 # Google API Client Library for Python
 google-auth-httplib2==0.1.0 # LEVEL_04
 google-auth-oauthlib==0.4.6 # LEVEL_04
 google-pasta==0.2.0 # LEVEL_02
@@ -309,6 +305,9 @@ cloudscraper==1.2.58 # LEVEL_04 # bypass Cloudflare's anti-bot page
 colorama==0.4.4 # LEVEL_01 Cross-platform colored terminal text
 filelock==3.3.0 # LEVEL_01
 #
+flake8==4.0.1 # LEVEL_02 # better linter than pyflakes
+pyflakes==2.4.0 # LEVEL_01 # required by flake8
+pycodestyle==2.8.0 # LEVEL_01
 #
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile
 pydeps==1.10.12 # LEVEL_02 # display module dependencies # cd src/main; pydeps .; open main.svg
