--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -56,9 +56,9 @@ cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.6
 #
 graphviz==0.17 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed
 #
-httpx==0.18.1 # LEVEL_04 # tda-api requires this version
+httpx==0.18.1 # LEVEL_04 # tda-api requires this version, tda-api
 #
-uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0
+uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0, google-api-python-client
 #
 # Generic Low Level Tools
 #
@@ -148,8 +148,8 @@ babel==2.9.1 # LEVEL_02
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.18.59 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.21.59 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.18.60 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.21.60 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
