--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -77,7 +77,7 @@ toolz==0.11.1 # LEVEL_01
 #
 # Machine Learning
 #
-tensorboard==2.6.0 # LEVEL_05
+tensorboard==2.7.0 # LEVEL_05
 tensorboard-data-server==0.6.1 # LEVEL_01
 tensorboard-plugin-wit==1.8.0 # LEVEL_01
 tensorflow==2.6.0 # LEVEL_06
@@ -227,7 +227,7 @@ httpcore==0.13.7 # LEVEL_03
 pyotp==2.6.0 # LEVEL_01
 python-dotenv==0.19.1 # LEVEL_01
 rfc3986==1.5.0 # LEVEL_01
-selenium==3.141.0 # LEVEL_02
+selenium==4.0.0 #3.141.0 # LEVEL_02
 #
 # GUI & Visualization
 #
@@ -474,7 +474,7 @@ python-slugify==5.0.2 # LEVEL_02
 python-socks==1.2.4 # LEVEL_01
 pytz==2021.3 # LEVEL_01
 pywavelets==1.1.1 # LEVEL_02
-pyyaml==5.4.1 # LEVEL_01
+pyyaml==6.0 # LEVEL_01
 pyzmq==22.3.0 # LEVEL_01
 qcore==1.7.0 # LEVEL_02
 regex==2021.10.8 # LEVEL_01
