--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -178,6 +178,7 @@ distributed==2021.9.1 # LEVEL_04
 scikit-image==0.18.3 # LEVEL_04
 scikit-learn==1.0 # LEVEL_03
 pyod==0.9.4 # LEVEL_05 # outlyer detection
+jax==0.2.22 # LEVEL_03 # Differentiate, compile, and transform Numpy code
 
 #
 # Computer Vision
@@ -218,7 +219,7 @@ py-vollib==1.0.1 # LEVEL_04 # option pricing
 ta-lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # fix: pip uninstall ta-lib; pip install --upgrade --no-cache-dir ta-lib # sometimes needed
 #
 robin-stocks==2.0.4 # LEVEL_04
-tda-api==1.3.7 # LEVEL_05
+tda-api==1.3.7 # LEVEL_06
 cryptography==35.0.0 # LEVEL_03
 #
 authlib==0.15.4 # LEVEL_04
@@ -227,7 +228,7 @@ httpcore==0.13.7 # LEVEL_03
 pyotp==2.6.0 # LEVEL_01
 python-dotenv==0.19.1 # LEVEL_01
 rfc3986==1.5.0 # LEVEL_01
-selenium==4.0.0 #3.141.0 # LEVEL_02
+selenium==4.0.0 # LEVEL_05
 #
 # GUI & Visualization
 #
@@ -263,7 +264,7 @@ dash-table==5.0.0 # LEVEL_01
 #
 # Google ..
 #
-google-api-core==2.1.0 # LEVEL_04
+google-api-core==2.1.1 # LEVEL_04
 google-api-python-client==2.26.1 # LEVEL_05 # Google API Client Library for Python
 google-auth-httplib2==0.1.0 # LEVEL_04
 google-auth-oauthlib==0.4.6 # LEVEL_04
