--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -72,6 +72,8 @@ numba==0.54.1 # LEVEL_02
 openpyxl==3.0.9 # LEVEL_02
 xlsxwriter==3.0.1 # LEVEL_01 needed for pandas XLSX ...
 toolz==0.11.1 # LEVEL_01
+box2d==2.3.2 # LEVEL_01
+pybullet==3.2.0 # LEVEL_01
 
 #
 #
