--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -232,6 +232,9 @@ python-dotenv==0.19.1 # LEVEL_01
 rfc3986==1.5.0 # LEVEL_01
 selenium==4.0.0 # LEVEL_05
 #
+stockstats==0.3.2 # LEVEL_04
+int-date==0.1.8 # LEVEL_03
+#
 # GUI & Visualization
 #
 qtconsole==5.1.1 # LEVEL_05
