--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -82,12 +82,12 @@ elegantrl==0.3.2 # LEVEL_04
 box2d-py==2.3.8 # LEVEL_01
 #
 #finrl==0.3.1 # LEVEL_05 # may cause all sorts of issues
-#stable-baselines3==1.2.0 # LEVEL_01
-#ray==1.7.0 # LEVEL_01
-#tensorboardX==2.4 # LEVEL_01
 #ccxt==1.58.26 # LEVEL_01
 #jqdatasdk==1.8.10 # LEVEL_01
 #
+tensorboardX==2.4 # LEVEL_02
+ray==1.7.0 # LEVEL_03
+stable-baselines3==1.2.0 # LEVEL_04
 lz4==3.1.3 # LEVEL_01
 gputil==1.4.0 # LEVEL_01
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
@@ -252,6 +252,14 @@ selenium==4.0.0 # LEVEL_05
 #
 stockstats==0.3.2 # LEVEL_04
 int-date==0.1.8 # LEVEL_03
+#
+pyportfolioopt==1.4.2 # LEVEL_06
+cvxpy==1.1.15 # LEVEL_05
+ecos==2.0.7.post1 # LEVEL_03
+osqp==0.6.2.post0 # LEVEL_04
+qdldl==0.1.5.post0 # LEVEL_03
+scs==2.1.4 # LEVEL_03
+
 #
 # GUI & Visualization
 #
