--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -66,11 +66,13 @@ httpx==0.18.1 # LEVEL_04 # tda-api requires this version, tda-api
 #
 uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0, google-api-python-client
 box2d==2.3.2 # LEVEL_01
+#
+kaleido==0.2.1 # LEVEL_01 # somehow can't update to 0.2.1.post
 
 #
 # Generic Low Level Tools
 #
-pandas==1.3.3 # LEVEL_03
+pandas==1.3.4 # LEVEL_03
 pandas-datareader==0.10.0 # LEVEL_04
 matplotlib==3.4.3 # LEVEL_03
 matplotlib-inline==0.1.3 # LEVEL_02
@@ -122,7 +124,7 @@ keras-preprocessing==1.1.2 # LEVEL_02
 #
 huggingface-hub==0.0.19 # LEVEL_03 # Client library to download and publish models on the huggingface.co hub
 #
-xgboost==1.4.2 # LEVEL_03 # check installation notes
+xgboost==1.5.0 # LEVEL_03 # check installation notes
 #
 pyro-api==0.1.2 # LEVEL_01 # probabilistic modeling and inference
 pyro-ppl==1.7.0 # LEVEL_03
@@ -214,7 +216,6 @@ opencv-python-headless==4.5.3.56 # LEVEL_02
 pillow==8.4.0 # LEVEL_01
 imageio==2.9.0 # LEVEL_02
 tifffile==2021.10.12 # LEVEL_02
-kaleido==0.2.1 # LEVEL_01
 #
 openvino==2021.4.1 # LEVEL_02 # Intel's Toolkit # https://docs.openvinotoolkit.org
 #openvino-dev==2021.4.1 # LEVEL_99 # has issues !!! # Openvino Tools
