--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -597,3 +597,20 @@ colormath==3.0.0 # LEVEL_02
 #
 sphinx==4.2.0 # LEVEL_03
 sphinx-panels==0.6.0 # LEVEL_04
+#
+alabaster==0.7.12 # LEVEL_01
+async-generator==1.10 # LEVEL_01
+greenlet==1.1.2 # LEVEL_01
+imagesize==1.2.0 # LEVEL_01
+iniconfig==1.1.1 # LEVEL_01
+mock==4.0.3 # LEVEL_01
+outcome==1.1.0 # LEVEL_02
+pluggy==1.0.0 # LEVEL_01
+py==1.10.0 # LEVEL_01
+psycopg2-binary==2.9.1 # LEVEL_01
+pyOpenSSL==21.0.0 # LEVEL_04
+redis==3.5.3 # LEVEL_01
+snowballstemmer==2.1.0 # LEVEL_01
+trio==0.19.0 # LEVEL_01
+trio-websocket==0.9.2 # LEVEL_01
+wsproto==1.0.0 # LEVEL_02
