--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -373,7 +373,7 @@ aenum==3.1.0 # LEVEL_01
 aiodns==3.0.0 # LEVEL_04
 aiohttp==3.7.4.post0 # LEVEL_03 # Async http client/server framework (asyncio)
 aiohttp-socks==0.6.0 # LEVEL_04
-#aioredis==2.0.0 # LEVEL_02
+aioredis==1.3.1 # LEVEL_02, can't update to 2.0.0
 altgraph==0.17.2 # LEVEL_01
 ansi2html==1.6.0 # LEVEL_01
 anyio==3.3.4 # LEVEL_02
@@ -597,6 +597,12 @@ colormath==3.0.0 # LEVEL_02
 #
 sphinx==4.2.0 # LEVEL_03
 sphinx-panels==0.6.0 # LEVEL_04
+sphinxcontrib-applehelp==1.0.2 # LEVEL_01
+sphinxcontrib-devhelp==1.0.2 # LEVEL_01
+sphinxcontrib-htmlhelp==2.0.0 # LEVEL_01
+sphinxcontrib-jsmath==1.0.1 # LEVEL_01
+sphinxcontrib-qthelp==1.0.3 # LEVEL_01
+sphinxcontrib-serializinghtml==1.1.5 # LEVEL_01
 #
 alabaster==0.7.12 # LEVEL_01
 async-generator==1.10 # LEVEL_01
@@ -611,6 +617,39 @@ psycopg2-binary==2.9.1 # LEVEL_01
 pyOpenSSL==21.0.0 # LEVEL_04
 redis==3.5.3 # LEVEL_01
 snowballstemmer==2.1.0 # LEVEL_01
-trio==0.19.0 # LEVEL_01
-trio-websocket==0.9.2 # LEVEL_01
+trio==0.19.0 # LEVEL_03
+trio-websocket==0.9.2 # LEVEL_04
 wsproto==1.0.0 # LEVEL_02
+#
+tzlocal==4.0.1 # LEVEL_03
+pytz-deprecation-shim==0.1.0.post0 # LEVEL_02
+tzdata==2021.4 # LEVEL_01
+validators==0.18.2 # LEVEL_02
+#
+GitPython==3.1.24 # LEVEL_03
+gitdb==4.0.7 # LEVEL_02
+smmap==4.0.0 # LEVEL_01 # can't update to 5.0.0 yet ?
+#
+#
+jqdatasdk==1.8.10 # LEVEL_04
+SQLAlchemy== 1.4.26 # LEVEL_02
+thriftpy2==0.4.14 # LEVEL_02
+ply==3.11 # LEVEL_01
+#
+aiohttp-cors==0.7.0 # LEVEL_04
+altair==4.1.0 # LEVEL_04
+astor==0.8.1 # LEVEL_01
+atari-py==0.2.9 # LEVEL_02
+base58==2.1.0 # LEVEL_01
+blessings==1.7 # LEVEL_02
+blinker==1.4 # LEVEL_01
+colorful==0.5.4 # LEVEL_01
+gpustat==0.6.0 # LEVEL_03
+hiredis==2.0.0 # LEVEL_01
+nvidia-ml-py3==7.352.0 # LEVEL_01
+opencensus==0.8.0 # LEVEL_05
+opencensus-context==0.1.2 # LEVEL_01
+py-spy==0.3.10 # LEVEL_01
+pydeck==0.7.0 # LEVEL_09
+PyMySQL==1.0.2 # LEVEL_01
+cattrs==1.8.0 # LEVEL_02
