--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -178,8 +178,8 @@ babel==2.9.1 # LEVEL_02
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.18.65 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.21.65 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.19.0 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.22.0 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
@@ -204,6 +204,10 @@ kaggle==1.5.12 # LEVEL_03
 dask[complete]==2021.9.1 # LEVEL_03
 dask-glm==0.2.0 # LEVEL_04
 dask-ml==2021.10.17 #1.9.0 # LEVEL_05
+#dask-xgboost==0.2.0 # LEVEL_02 # outdated !
+dask-cuda==21.10.0 # LEVEL_05
+pynvml==11.0.0 # LEVEL_01
+#
 distributed==2021.9.1 # LEVEL_04
 scikit-image==0.18.3 # LEVEL_04
 scikit-learn==1.0 # LEVEL_03
@@ -301,6 +305,8 @@ dash-canvas==0.1.0 # LEVEL_06
 dash-core-components==2.0.0 # LEVEL_01
 dash-html-components==2.0.0 # LEVEL_01
 dash-table==5.0.0 # LEVEL_01
+dash-cytoscape==0.3.0 # LEVEL_06
+dash-renderer==1.9.1 # LEVEL_01
 
 #
 # Google ..
@@ -421,9 +427,12 @@ ephem==4.1 # LEVEL_01
 et-xmlfile==1.1.0 # LEVEL_01
 eventkit==0.8.9 # LEVEL_02
 fake-useragent==0.1.11 # LEVEL_01
+#
 flask==2.0.2 # LEVEL_03
 flask-compress==1.10.1 # LEVEL_04
 flask-seasurf==0.3.1 # LEVEL_04
+flask-caching==1.10.1 # LEVEL_04
+#
 freetype-py==2.2.0 # LEVEL_01
 fsspec==2021.10.1 # LEVEL_01
 future==0.18.2 # LEVEL_01
@@ -672,4 +681,7 @@ conllu==4.4.1 # LEVEL_01
 cssselect2==0.4.1 # LEVEL_03
 #
 cytoolz==0.11.0 # LEVEL_02
-
+#
+importlib-metadata==4.8.1 # LEVEL_02
+pathspec==0.9.0 # LEVEL_01
+#
