--- a/requirements_work.txt
+++ b/requirements_work.txt
@@ -1,52 +1,15 @@
 #
 # try to add them all !!
 #
-biopython
-boost
-brotlipy
-certifi
-click-plugins
-cligj
-colorcet
-conllu
-cssselect2
-cudf
-cugraph
-cuml
-cupy
-cusignal
-cuspatial
-cuxfilter
-cytoolz
-dash-cytoscape
-dash-renderer
-dask-cuda
-dask-xgboost
-datashader
-datashape
-dlpack
-faiss-cpu
-fastavro
-fastrlock
-fiona
-fire
-flask-caching
-fontconfig
-gdal
-geopandas
-geos
-geotiff
-git-python
-glib
-glog
-gunicorn
+#
+glib==1.0.0 # LEVEL_01
+glog==0.3.1 # LEVEL_01
+gunicorn==20.1.0 # LEVEL_01
+#
 icu
 imagecodecs-lite
-importlib-metadata
-importlib_metadata
 krb5
 msgpack-python
-munch
 nibabel
 nilearn
 nodejs
@@ -54,16 +17,10 @@ nvstrings
 olefile
 pandoc
 panel
-param
-pathspec
-pip
 proj
-pyct
 pydata-sphinx-theme
 pyee
-pynvml
 pyppeteer
-pyproj
 pyviz_comms
 rapids
 rapids-xgboost
@@ -71,6 +28,5 @@ re2
 rmm
 rouge-score
 rtree
-shapely
 snappy
 spdlog
