--- a/requirements_work.txt
+++ b/requirements_work.txt
@@ -6,27 +6,29 @@ glib==1.0.0 # LEVEL_01
 glog==0.3.1 # LEVEL_01
 gunicorn==20.1.0 # LEVEL_01
 #
-icu
-imagecodecs-lite
-krb5
-msgpack-python
-nibabel
-nilearn
-nodejs
-nvstrings
-olefile
-pandoc
-panel
-proj
-pydata-sphinx-theme
-pyee
-pyppeteer
-pyviz_comms
-rapids
-rapids-xgboost
-re2
-rmm
-rouge-score
-rtree
-snappy
-spdlog
+icu==0.0.1 # LEVEL_01
+imagecodecs-lite==2020.1.31 # LEVEL_01
+krb5==0.2.0 # LEVEL_01
+msgpack-python==0.5.6 # LEVEL_01
+#
+nibabel==3.2.1 # LEVEL_01
+nilearn==0.8.1 # LEVEL_01
+#
+nodejs==0.1.1 # LEVEL_01
+nvstrings==0.6.1.post1 # LEVEL_01
+olefile==0.46 # LEVEL_01
+panel==0.12.4 # LEVEL_01
+proj==0.2.0 # LEVEL_01
+#
+pydata-sphinx-theme==0.7.1 # LEVEL_01
+pyee==8.2.2 # LEVEL_01
+pyppeteer==0.2.6 # LEVEL_01
+pyviz_comms==2.1.0 # LEVEL_01
+rapids==0.0.1 # LEVEL_01
+rapids-xgboost==0.0.1 # LEVEL_01
+re2==0.2.24 # LEVEL_01
+rmm==0.0.1 # LEVEL_01
+rouge-score==0.0.4 # LEVEL_01
+rtree==0.9.7 # LEVEL_01
+snappy==3.0.1 # LEVEL_01
+spdlog==2.0.4 # LEVEL_01
