--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -96,8 +96,8 @@ box2d-py==2.3.8 # LEVEL_01
 #ccxt==1.58.26 # LEVEL_01
 #
 tensorboardX==2.4 # LEVEL_02
-ray==1.7.0 # LEVEL_03
-stable-baselines3==1.2.0 # LEVEL_04
+ray==1.7.1 # LEVEL_03
+stable-baselines3==1.2.0 # LEVEL_04 # version 1.3.0 depends on gym<0.20 :-(
 lz4==3.1.3 # LEVEL_01
 gputil==1.4.0 # LEVEL_01
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
@@ -130,16 +130,16 @@ xgboost==1.5.0 # LEVEL_03 # check installation notes
 pyro-api==0.1.2 # LEVEL_01 # probabilistic modeling and inference
 pyro-ppl==1.7.0 # LEVEL_03
 #
-torch==1.9.1 # LEVEL_02
+torch==1.10.0 # LEVEL_02
 torch-optimizer==0.1.0 # LEVEL_04
-torchaudio==0.9.1 # LEVEL_03
-torchvision==0.10.1 # LEVEL_03
+torchaudio==0.10.0 # LEVEL_03
+torchvision==0.11.1 # LEVEL_03
 pytorch-ranger==0.1.1 # LEVEL_03
 #
 theano==1.0.5 # LEVEL_03
 nose==1.3.7 # LEVEL_01
 #
-fastai==2.5.2 # LEVEL_05
+fastai==2.5.3 # LEVEL_05
 fastcore==1.3.26 # LEVEL_03
 fastdownload==0.0.5 # LEVEL_04
 fastprogress==1.0.0 # LEVEL_02
@@ -151,7 +151,7 @@ gym==0.21.0 # LEVEL_02
 gensim==4.1.2 # LEVEL_03
 #
 openai==0.10.5 # LEVEL_04
-pandas-stubs==1.2.0.31 # LEVEL_01 # needed by openai
+pandas-stubs==1.2.0.33 # LEVEL_01 # needed by openai
 #
 #ktrain>=0.27.2
 #
@@ -200,14 +200,14 @@ wordcloud==1.8.1 # LEVEL_04
 #
 imbalanced-learn==0.8.1 # LEVEL_04
 kaggle==1.5.12 # LEVEL_03
-dask[complete]==2021.9.1 # LEVEL_03
+dask[complete]==2021.10.0 # LEVEL_03
 dask-glm==0.2.0 # LEVEL_04
 dask-ml==2021.10.17 #1.9.0 # LEVEL_05
 #dask-xgboost==0.2.0 # LEVEL_02 # outdated !
-dask-cuda==21.10.0 # LEVEL_05
+# dask-cuda==21.10.0 # LEVEL_05 # outdated requirements
+distributed==2021.10.0 # LEVEL_04
 pynvml==11.0.0 # LEVEL_01
 #
-distributed==2021.9.1 # LEVEL_04
 scikit-image==0.18.3 # LEVEL_04
 scikit-learn==1.0 # LEVEL_03
 pyod==0.9.4 # LEVEL_05 # outlyer detection
