--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -95,9 +95,9 @@ box2d-py==2.3.8 # LEVEL_01
 #finrl==0.3.1 # LEVEL_05 # may cause all sorts of issues
 #ccxt==1.58.26 # LEVEL_01
 #
-tensorboardX==2.4 # LEVEL_02
-ray==1.7.1 # LEVEL_03
-stable-baselines3==1.2.0 # LEVEL_04 # version 1.3.0 depends on gym<0.20 :-(
+tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without Tensorflow
+ray==1.7.1 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications
+stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
 lz4==3.1.3 # LEVEL_01
 gputil==1.4.0 # LEVEL_01
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
@@ -182,7 +182,8 @@ botocore==1.22.0 # LEVEL_03 # Low-level, data-driven core of boto 3 # required b
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
-spacytextblob==3.0.1 # LEVEL_05
+spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
+textblob==0.15.3 # LEVEL_03 # spacytextblob 3.0.1 requires textblob<0.16.0,>=0.15.3 # Simple, Pythonic text processing. Sentiment analysis, part-of-speech tagging, noun phrase parsing
 # spacy-transformers  # downgrades transformers !!
 #
 transformers==4.11.3 # LEVEL_04
@@ -190,7 +191,6 @@ datasets==1.14.0 # LEVEL_04
 #
 tokenizers==0.10.3 # LEVEL_01
 #
-textblob==0.15.3 # LEVEL_03
 wordcloud==1.8.1 # LEVEL_04
 #
 #newspaper3k>=0.2.8
@@ -200,13 +200,14 @@ wordcloud==1.8.1 # LEVEL_04
 #
 imbalanced-learn==0.8.1 # LEVEL_04
 kaggle==1.5.12 # LEVEL_03
+#
 dask[complete]==2021.10.0 # LEVEL_03
 dask-glm==0.2.0 # LEVEL_04
 dask-ml==2021.10.17 #1.9.0 # LEVEL_05
 #dask-xgboost==0.2.0 # LEVEL_02 # outdated !
 # dask-cuda==21.10.0 # LEVEL_05 # outdated requirements
 distributed==2021.10.0 # LEVEL_04
-pynvml==11.0.0 # LEVEL_01
+# pynvml==11.0.0 # LEVEL_01 # POTENTIALLY_UNUSED # Python Bindings for the NVIDIA Management Library
 #
 scikit-image==0.18.3 # LEVEL_04
 scikit-learn==1.0 # LEVEL_03
