minor version up, relaxing requirements

--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -45,15 +45,17 @@ mplfinance==0.12.7a17 # LEVEL_04
 #
 # Hard dependencies
 #
-gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow requirement, generic ast
-six==1.15.0 # LEVEL_01 # LOCKED # tensorflow 2.5.0 requires it
-typing-extensions==3.7.4.3 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires ~3.7.4
-clang==5.0 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires clang~=5.0
+gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow 2.6.0 requirement, generic ast
+six==1.15.0 # LEVEL_01 # LOCKED # tensorflow 2.6.0 requires it
+clang==5.0 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires clang~=5.0 # libclang python bindings
 absl-py==0.12.0 # LEVEL_02 # LOCKED # tensorflow-metadata 1.2.0 has requirement absl-py<0.13,>=0.9
 h5py==3.1.0 # LEVEL_02 # LOCKED # tensorflow==2.6.0 requires h5py~=3.1.0
 google-auth==1.35.0 # LEVEL_03 # LOCKED # tensorboard==2.6.0 requires google-auth>=1.6.3,<2
 flatbuffers==1.12 # LEVEL_01 # LOCKED # tensorflow 2.6.0 requires flatbuffers~=1.12.0
 wrapt==1.12.1 # LEVEL_01 # tensorflow 2.6.0 requires 1.12.1 # Module for decorators, wrappers and monkey patching.
+#
+typing-extensions==3.7.4.3 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires ~3.7.4
+#
 bokeh==2.3.3 # LEVEL_03 # LOCKED # 2.4.0 does not work easily just yet; typing-extensions and tensorflow !!
 jupyter-bokeh==3.0.3 # LEVEL_09 # LOCKED # 3.0.4 does not work easily just yet; typing-extensions and tensorflow !!
 #
@@ -61,8 +63,6 @@ pystan==2.19.1.1 # LEVEL_02 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requi
 cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68
 #
 graphviz==0.17 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed
-#
-httpx==0.18.1 # LEVEL_04 # tda-api requires this version, tda-api
 #
 uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0, google-api-python-client
 box2d==2.3.2 # LEVEL_01
@@ -85,6 +85,7 @@ openpyxl==3.0.9 # LEVEL_02
 xlsxwriter==3.0.1 # LEVEL_01 needed for pandas XLSX ...
 toolz==0.11.1 # LEVEL_01
 pybullet==3.2.0 # LEVEL_01
+httpx==0.20.0 # LEVEL_04 # tda-api requires this version, tda-api
 
 #
 # Super Collectors .. building on others
@@ -99,7 +100,7 @@ tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without 
 ray==1.7.1 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications
 stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
 lz4==3.1.3 # LEVEL_01
-gputil==1.4.0 # LEVEL_01
+gputil==1.4.0 # LEVEL_01 # Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
 
 #
