--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -64,12 +64,15 @@ cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.6
 #
 graphviz==0.17 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed
 #
-uritemplate==3.0.1 # LEVEL_01 # can't update to 4.0.0, google-api-python-client
 box2d==2.3.2 # LEVEL_01
 #
 kaleido==0.2.1 # LEVEL_01 # somehow can't update to 0.2.1.post
 #
 smmap==4.0.0 # LEVEL_01 # can't update to 5.0.0 yet, due to gitdb ?
+#
+pyparsing==2.4.7 # LEVEL_01 # google-api-python-client
+#
+stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
 
 #
 # Generic Low Level Tools
@@ -98,7 +101,6 @@ box2d-py==2.3.8 # LEVEL_01
 #
 tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without Tensorflow
 ray==1.7.1 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications
-stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
 lz4==3.1.3 # LEVEL_01
 gputil==1.4.0 # LEVEL_01 # Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
@@ -319,6 +321,7 @@ google-auth-oauthlib==0.4.6 # LEVEL_04
 google-pasta==0.2.0 # LEVEL_02
 googleapis-common-protos==1.53.0 # LEVEL_02
 googletransx==2.4.2 # LEVEL_03
+uritemplate==4.1.1 # LEVEL_01 # required by google-api-python-client
 
 #
 # Jupyter
@@ -519,7 +522,6 @@ pyinstaller==4.5.1 # LEVEL_03
 pyinstaller-hooks-contrib==2021.3 # LEVEL_01 # deployment
 pyluach==1.3.0 # LEVEL_01
 pymeeus==0.5.11 # LEVEL_01
-pyparsing==2.4.7 # LEVEL_01
 pyrsistent==0.18.0 # LEVEL_01
 pysocks==1.7.1 # LEVEL_01
 python-dateutil==2.8.2 # LEVEL_02
