added more packages

--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -709,3 +709,21 @@ shapely==1.7.1 # LEVEL_01
 #
 #geotiff==0.2.3 # LEVEL_04 # has old dependencies on tifffile
 geos==0.2.3 # LEVEL_04
+#
+glib==1.0.0 # LEVEL_01
+glog==0.3.1 # LEVEL_02
+#
+gunicorn==20.1.0 # LEVEL_02
+#
+icu==0.0.1 # LEVEL_01
+#
+imagecodecs==2021.8.26 # LEVEL_02
+imagecodecs-lite==2020.1.31 # LEVEL_03
+#
+krb5==0.2.0 # LEVEL_01
+#
+msgpack-python==0.5.6 # LEVEL_01
+#
+nibabel==3.2.1 # LEVEL_03
+nilearn==0.8.1 # LEVEL_04
+#
