--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -608,6 +608,8 @@ zstd==1.5.0.2 # LEVEL_01
 spectra==0.0.11 # LEVEL_03
 colormath==3.0.0 # LEVEL_02
 #
+pydata-sphinx-theme==0.7.1 # LEVEL_04
+#
 sphinx==4.2.0 # LEVEL_03
 sphinx-panels==0.6.0 # LEVEL_04
 sphinxcontrib-applehelp==1.0.2 # LEVEL_01
@@ -726,4 +728,41 @@ msgpack-python==0.5.6 # LEVEL_01
 #
 nibabel==3.2.1 # LEVEL_03
 nilearn==0.8.1 # LEVEL_04
+#
+rtree==0.9.7 # LEVEL_01
+#
+snappy==3.0.1 # LEVEL_04
+snappy-manifolds==1.1.2 # LEVEL_01
+spherogram==2.0 # LEVEL_02
+cypari==2.4.1 # LEVEL_02
+FXrays==1.3.5 # LEVEL_01
+knot-floer-homology==1.1 # LEVEL_01
+plink==2.4 # LEVEL_01
+pypng==0.0.21 # LEVEL_01
+#
+rapids==0.0.1 # LEVEL_05
+#rapids-xgboost==0.0.1 # LEVEL_01
+PasteDeploy==2.1.1 # LEVEL_02
+hupper==1.10.3 # LEVEL_01
+plaster==1.0 # LEVEL_02
+plaster-pastedeploy==0.7 # LEVEL_03
+pyramid==2.0 # LEVEL_04
+translationstring==1.4 # LEVEL_01
+venusian==3.0.0 # LEVEL_01
+webob==1.8.7 # LEVEL_01
+zope_deprecation==4.4.0 # LEVEL_02
+zope_interface==5.4.0 # LEVEL_02
+#
+nodejs==0.1.1 # LEVEL_02
+optional-django==0.1.0 # LEVEL_01
+#
+olefile==0.46 # LEVEL_01
+#
+pyviz-comms==2.1.0 # LEVEL_02
+#
+proj==0.2.0 # LEVEL_04
+#
+pyee==8.2.2 # LEVEL_01
+#
+rouge-score==0.0.4 # LEVEL_03
 #
